add first 7 pages

--- a/index.css
+++ b/index.css
@@ -1,5 +1,411 @@
-.page_1{
+body {
+    margin: 0px;
+    font-family: 'Kanit', sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.navbar {
+    padding: 2em 5em 2em 5em;
+    font-weight: 500;
+    font-size: 1.2em;
+    border-bottom: 2px solid #dbdada;
+}
+
+.navbar-links ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar-links li {
+    list-style: none;
+}
+
+.toggle-button {
+    position: absolute;
+    top: 1.75rem;
+    right: 2rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+@media (max-width: 540px) {
+    .toggle-button {
+        display: flex;
+    }
+
+    .navbar-links {
+        display: none;
+        width: 100%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .navbar-links li {
+        text-align: center;
+    }
+
+    .navbar-links li a {
+        padding: .5rem 1rem;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
+}
+
+.page {
     height: 100vh;
-    max-height: 100vh;
-    background-color: blue;
+    display: flex;
+    flex-direction: column;
+}
+
+.page-1 {
+    background-color: #A4B4BF;
+}
+
+.page-1 .container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: white;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-1 .container h1 {
+    font-size: 3rem;
+    margin: 0;
+    letter-spacing: 0.05em;
+}
+
+.page-1 .container h2 {
+    font-size: 2.5rem;
+    margin: 0;
+    color: #E8E6E6;
+    margin-bottom: 0.5em;
+}
+
+.page-1 .container button {
+    font-size: 0.75em;
+    width: 15em;
+    height: 3.5em;
+    border: 0px;
+    border-radius: 20px;
+    letter-spacing: 0.1em;
+}
+
+.page-2 {
+    background-color: #7795A8;
+}
+
+.page-2 .container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.page-2 .container img {
+    max-height: 100%;
+    max-width: 40vw;
+}
+
+@media (max-width: 1035px) {
+    .page-2 .container img {
+        width: 100%;
+        height: auto;
+        max-width: 100vw;
+    }
+
+    .page-2 .container h2#aboutme {
+        font-size: 7vw;
+    }
+
+    .page-2 .container h2#name {
+        font-size: 5vw;
+    }
+
+    .page-2 .container h2 {
+        font-size: 3vw;
+    }
+
+    #aboutme {
+        font-size: 1em;
+        color: black;
+    }
+}
+
+.page-2 .container .text {
+    padding: 4em;
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    justify-content: center;
+}
+
+.page-2 .container h2 {
+    margin: 0;
+    color: #5B5552;
+}
+
+#aboutme {
+    font-size: 4.5em;
+    color: black;
+}
+
+#name {
+    font-size: 3em;
+}
+
+.page-3 {
+    background-color: #F8F6F1;
+}
+
+.page-3 .container {
+    padding: 5em;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.page-3 .container h2 {
+    font-size: 3em;
+}
+
+.page-3 .container p {
+    font-size: 1.5em;
+}
+@media (max-width: 670px) {
+    .page-3 .container {
+        padding: 2em;
+    }
+    .page-3 .container h2 {
+        font-size: 5vw;
+    }
+    .page-3 .container p {
+        font-size: 4vw;
+    }
+}
+
+.page-4 {
+    background-color: #A4B4BF;
+    justify-content: center;
+}
+.page-4 .container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.page-4 .container h2{
+    font-size: 3.25em;
+    margin: 0;
+    margin-top: 1.5em;
+}
+.page-4 .container h3{
+    font-size: 1.75em;
+    margin: 0;
+}
+.page-4 .container h4{
+    font-size: 1.25em;
+    margin: 0;
+}
+.page-4 .container .box{
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    justify-content: center;
+}
+.page-4 .container .flex-row{
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+    align-items: center;
+}
+.page-4 .container img{
+    height: 150px;
+    width: 100px;
+    object-fit: cover;
+}
+@media (max-width: 740px) {
+    .page-4 .container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 3em;
+    }
+    .page-4 .container h2{
+        font-size: 2em;
+        margin: 0;
+    }
+    .page-4 .container h3{
+        font-size: 1em;
+        margin: 0;
+    }
+    .page-4 .container h4{
+        font-size: 0.7em;
+        margin: 0;
+    }
+}
+
+.page-5 {
+    background-color: #E8E6E6;
+    justify-content: center;
+}
+
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+}
+ul.timeline:before {
+    content: ' ';
+    background: #d4d9df;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 2px;
+    height: 100%;
+    z-index: 400;
+}
+ul.timeline > li {
+    margin: 20px 0;
+    padding-left: 20px;
+}
+ul.timeline > li:before {
+    content: ' ';
+    background: white;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #12356e;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 400;
+}
+ul.timeline{
+    margin-bottom: 50px;
+}
+.page-5 .container{
+    padding: 5em 10em 5em 10em;
+}
+.page-5 .container .row{
+    display: flex;
+    justify-content: center;
+}
+.page-5 .container h2{
+    font-size: 3.25em;
+    margin: 0;
+    margin-top: 1.5em;
+    text-align: center;
+}
+.page-5 .container a{
+    color: black;
+    font-size: 1.25em;
+}
+.page-5 .container p{
+    margin: 0.25em;
+}
+.page-5 .container .title{
+    font-weight: 900;
+    font-size: 1.5em;
+}
+@media (max-width: 800px) {
+    .page-5 .container{
+        padding: 0;
+    }
+    .page-5 .container h2{
+        font-size: 1.5em;
+    }
+    .page-5 .container .title{
+        text-align: center;
+        font-size: 0.85em;
+    }
+    .page-5 .container a{
+        font-size: 0.75em;
+    }
+    .page-5 .container p{
+        font-size: 0.5em;
+    }
+}
+.page-6 {
+    background-color: #7795A8;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 4em;
+}
+@media (max-width: 800px) {
+    .page-6 {
+        font-size: 7vw;
+    }
+}
+.page-7{
+    background-color: #E8E6E6;
+    justify-content: center;
+    align-items: center;
+    padding: 3em;
+    height: 100vh;
+    display: flex;
+}
+.page-7 .container{
+    display: flex;
+    flex-wrap: wrap;
+    gap : 3em;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+}
+.page-7 a{
+    color: #7795A8;
+}
+.page-7 .container > .flex-row-item {
+    flex: 1 1 30%; /*grow | shrink | basis */
+}
+.page-7 .container h3{
+    font-size: 1.5em;
+    margin: 0px;
+}
+.page-7 .container h4{
+    margin: 0px;
+}
+@media (max-width: 560px) {
+    .page-7{
+        height: auto;
+    }
+    .page-7 .container > .flex-row-item {
+        flex-direction: column;
+        flex: auto;
+    }
+    .page-7 .container h3{
+        font-size: 1em;
+        margin: 0px;
+    }
 }
