--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,7 @@ a {
 .page-1 {
   background-color: #a4b4bf;
   background-image: url(../img/poko.png);
+  transition: background 300ms ease-in 200ms;
   background-position: center;
  /* Center the image */
   background-size: cover;
